--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,10 +1,16 @@
 .header {
-  height: 100svh;
+  height: 100vh;
   width: 100%;
 
   background-image: url("../../assets/images/bg.svg");
   background-size: cover;
 
+  @media (max-width: 2560px) {
+    height: 60vh;
+  }
+  @media (max-width: 1920px) {
+    height: 100vh;
+  }
   .inner_cont {
     width: 100%;
     height: 100%;
